feat: ollama integration
